--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,26 +1,3 @@
-#spotify-theme {
-    color: #1ED760;
-}
-
-.container-fluid {
-    padding: 6% 21%;
-}
-
-h1 {
-    font-size: 4rem;
-    font-weight: 600;
-    margin: 0 12% 5% 0;
-}
-
-h3 {
-    font-size: 2.2rem;
-    font-weight: 300;
-    margin: 5% 12% 5% 0;
-}
-
-p {
-    color: gray;
-    font-size: 1.2rem;
-    margin: auto;
-    padding: 5% 0;
+main {
+    margin: 6% 21%;
 }
