--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Title</title>
-    <!--bootstrap css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!--font awesome-->
-    <script src="https://kit.fontawesome.com/c012dc5e92.js" crossorigin="anonymous"></script>
-    <!--custom css-->
-    <link href="../static/css/styles.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-7 col-md-12 col-sm-12">
-                <h1>Экспорт из <a id="spotify-theme" href="https://www.spotify.com/">Spotify</a> в CSV</h1>
-                <h3>выгрузка любимых треков, плейлистов, альбомов, подкастов и исполнителей</h3>
-                <a href="{{ url_for('login') }}" type="button" class="btn btn-primary btn-lg">Log in with Spotify</a>
-                <a type="button" class="btn btn-outline-dark btn-lg"><i class="fa-brands fa-github"></i> sourcecode</a>
+{% extends 'base.html' %}
+
+{% block main %}
+    <main>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h1>Export from <a id="spotify-theme" href="https://www.spotify.com/">Spotify</a> to CSV</h1>
+                    <h3>download your liked songs and playlists in .csv format</h3>
+                    <a href="{{ url_for('login') }}" type="button" class="btn btn-primary btn-lg">Sign in with Spotify</a>
+                    <a href="{{ url_for('info') }}" type="button" class="btn btn-outline-secondary btn-lg">
+                        <i class="fa-solid fa-circle-info"></i>
+                        What is it?
+                    </a>
+                </div>
+                <div class="col-lg-6">
+                    <!--placeholder image-->
+                    <img class="rounded" src="../static/images/index_example.png" alt="">
+                </div>
             </div>
-            <div class="col-lg-5 col-md-12 col-sm-12 overflow-hidden shadow-lg">
-                <!--placeholder image-->
-                <img class="rounded" src="../static/images/index_example.png" alt="">
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+        </section>
+    </main>
+{% endblock %}
