Added user library display

--- a/templates/results.html
+++ b/templates/results.html
@@ -4,7 +4,7 @@
     <main>
         {# welcome #}
         <section class="d-flex justify-content-between">
-            <h1>Welcome, {{ user_name }}</h1>
+            <h1>Welcome, {{ username }}</h1>
             <a href="{{ url_for('logout') }}">logout</a>
         </section>
 
@@ -18,11 +18,11 @@
             <ul class="list-group w-auto">
                 <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
                     <img src="../static/images/playlist_example.jpeg"
-                         alt="" class="align-self-center rounded-circle flex-shrink-0" width="60" height="60">
+                         alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                         <div>
                             <h3 class="mb-0">Liked tracks</h3>
-                            <p class="mb-0 opacity-75">100 items</p>
+                            <p class="mb-0 opacity-75">{{ saved_tracks.total }} songs</p>
                         </div>
                         <a href="#" class="opacity-50 text-nowrap"><i class="bi bi-download"></i></a>
                     </div>
@@ -34,17 +34,19 @@
         <section>
             <h2>Playlists</h2>
             <ul class="list-group w-auto">
+                {% for playlist in saved_playlists %}
                 <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
-                    <img src="../static/images/playlist_example.jpeg"
-                         alt="" class="align-self-center rounded-circle flex-shrink-0" width="60" height="60">
+                    <img src="{{ playlist.images[0].url }}"
+                         alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                         <div>
-                            <h3 class="mb-0">Ruiner</h3>
-                            <p class="mb-0 opacity-75">36 items</p>
+                            <h3 class="mb-0">{{ playlist.name }}</h3>
+                            <p class="mb-0 opacity-75">{{ playlist.tracks.total }} songs</p>
                         </div>
                         <a href="#" class="opacity-50 text-nowrap"><i class="bi bi-download"></i></a>
                     </div>
                 </li>
+                {% endfor %}
             </ul>
         </section>
     </main>
