--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     {# bootstrap responsive viewport meta tag#}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %} - SpotifyExport</title>
+    <title>{% block title %}{% endblock %}</title>
     {# bootstrap css #}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     {# bootstrap icons #}
