--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
     <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+
     {# bootstrap responsive viewport meta tag#}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}</title>
-    {# bootstrap css #}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    {# bootstrap css, js #}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
     {# bootstrap icons #}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+
     {# custom css #}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
     {% block head %}{% endblock %}
 </head>
-<body>
-    {% block main %}{% endblock %}
+
+<body class="h-100">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+        {% block header %}{% endblock %}
+        {% block main %}{% endblock %}
+        {% block footer %}{% endblock %}
+    </div>
 </body>
+
 </html>
