--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,1 +1,46 @@
+body {
+  background-color: #121212;
+}
 
+
+.cover-container {
+  max-width: 42em;
+}
+
+
+.btn-success,
+.btn-success:hover,
+.btn-success:focus {
+  background-color: #1ed75f;
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+}
+
+
+.nav-masthead .nav-link {
+  color: rgba(255, 255, 255, .5);
+  border-bottom: .25rem solid transparent;
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, .25);
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+.list-group-item {
+  background-color: #181818;
+  border-color: #2a2a2a;
+}
+
+h1, h2, h3, p {
+  color: white;
+}
