--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,9 +1,34 @@
 {% extends '_layout.html' %}
 
+{% block header %}
+    <header class="mb-auto">
+        <div class="d-flex justify-content-between">
+            <a class="link-light text-decoration-none" href="https://github.com/egliorn/spotify-to-csv-export-webapp">
+                <i class="bi bi-github"></i> spotify-csv-export-webapp
+            </a>
+            <nav class="nav nav-masthead">
+                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">EN</a>
+                <a class="nav-link fw-bold py-1 px-0" href="#">RU</a>
+            </nav>
+        </div>
+    </header>
+{% endblock %}
+
 {% block main %}
-<main>
-    <section class="container-fluid text-center">
-        <a href="{{ url_for('auth.login') }}" class="btn btn-primary btn-lg">Sign in with Spotify</a>
-    </section>
-</main>
+    <main class="text-center px-3">
+        <section>
+            <h1>Spotify -> CSV export</h1>
+            <p class="lead">Export Spotify playlists to CSV.</p>
+            <p class="lead">
+                <a href="{{ url_for('auth.login') }}" class="btn btn-lg btn-success fw-bold">Sign in with Spotify</a>
+            </p>
+        </section>
+    </main>
+{% endblock %}
+
+
+{% block footer %}
+    <footer class="mt-auto text-center text-white-50">
+        <p>by <a href="https://twitter.com/mdo" class="text-white">@egliorn</a></p>
+    </footer>
 {% endblock %}
