--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -3,21 +3,15 @@
 {% block main %}
     <main>
         {# welcome #}
-        <section class="d-flex justify-content-between">
-            <h1>id: {{ current_user.spotify_id }}</h1>
-            <a href="{{ url_for('auth.logout') }}">logout</a>
-        </section>
-
-        {# download all #}
-        <section class="">
-            <p>download separate, or <a class="btn btn-primary btn-sm" href="{{ url_for('main.send_zip') }}">
-                download all</a></p>
+        <section class="d-flex justify-content-between mb-4">
+            <h1>{{ current_user.spotify_id }}</h1>
+            <a class="link-light text-decoration-none" href="{{ url_for('auth.logout') }}">logout</a>
         </section>
 
         {# saved tracks #}
-        <section class="">
-            <ul class="list-group w-auto">
-                <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
+        <section class="mb-4">
+            <ul class="list-group bs-secondary-color w-auto">
+                <li class="list-group-item bs-secondary-color d-flex gap-3 py-3" aria-current="true">
                     <img src="static/img/spotify_liked_tracks.png"
                          alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
                     <div class="d-flex gap-2 w-100 justify-content-between">
@@ -26,31 +20,41 @@
                             <p class="mb-0 opacity-75">{{ saved_tracks.total }} songs</p>
                         </div>
                         <a href="{{ url_for('main.send_csv', name='Liked Songs') }}"
-                           class="opacity-50 text-nowrap"><i class="bi bi-download"></i></a>
+                           class="opacity-50 text-nowrap">
+                            <i class="link-light text-decoration-none bi bi-box-arrow-down"></i>
+                        </a>
                     </div>
                 </li>
             </ul>
         </section>
 
         {# saved playlists #}
-        <section>
+        <section class="mb-4">
             <h2>Playlists</h2>
             <ul class="list-group w-auto">
                 {% for playlist in saved_playlists.items %}
-                <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
-                    <img src="{{ playlist.images[-1].url if playlist.images[0] else "static/img/spotify_playlist_ph.png"}}"
-                         alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
-                    <div class="d-flex gap-2 w-100 justify-content-between">
-                        <div>
-                            <h3 class="mb-0">{{ playlist.name }}</h3>
-                            <p class="mb-0 opacity-75">{{ playlist.tracks.total }} songs</p>
+                    <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
+                        <img src="{{ playlist.images[-1].url if playlist.images[0] else "static/img/spotify_playlist_ph.png" }}"
+                             alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
+                        <div class="d-flex gap-2 w-100 justify-content-between">
+                            <div>
+                                <h3 class="mb-0">{{ playlist.name }}</h3>
+                                <p class="mb-0 opacity-75">{{ playlist.tracks.total }} songs</p>
+                            </div>
+                            <a href="{{ url_for('main.send_csv', id=playlist.id, name=playlist.name) }}"
+                               class="opacity-50 text-nowrap">
+                                <i class="link-light text-decoration-none bi bi-box-arrow-down"></i>
+                            </a>
                         </div>
-                        <a href="{{ url_for('main.send_csv', id=playlist.id, name=playlist.name) }}"
-                           class="opacity-50 text-nowrap"><i class="bi bi-download"></i></a>
-                    </div>
-                </li>
+                    </li>
                 {% endfor %}
             </ul>
         </section>
+
+        {# download all #}
+        <section>
+            <a class="btn btn-light w-100" href="{{ url_for('main.send_zip') }}">Download all</a>
+        </section>
+
     </main>
 {% endblock %}
