--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -38,7 +38,7 @@ body {
 
 .list-group-item {
   background-color: #181818;
-  border-color: #2a2a2a;
+  border-color: #181818;
 }
 
 h1, h2, h3, p {
