--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -34,7 +34,7 @@
             <ul class="list-group w-auto">
                 {% for playlist in saved_playlists.items %}
                     <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
-                        <img src="{{ playlist.images[-1].url if playlist.images[0] else "static/img/spotify_playlist_ph.png" }}"
+                        <img src="{{ playlist.images | playlist_image_filter }}"
                              alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
                         <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
