--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,7 +21,7 @@
             <p class="lead">Export your Spotify playlists to .csv</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="{{ url_for('auth.login') }}" class="btn btn-success fw-bold">Sign in with Spotify</a>
-                <a href="#" class="btn btn-outline-light fw-bold">How to use?</a>
+                <a href="https://github.com/egliorn/spotify-csv-export-webapp#readme" class="btn btn-outline-light fw-bold">What is this?</a>
             </div>
         </section>
     </main>
