--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -5,7 +5,7 @@
         {# welcome #}
         <section class="d-flex justify-content-between">
             <h2 class="text-truncate pb-4">{{ session['userid'] }}</h2>
-            <a class="link-light text-decoration-none" href="{{ url_for('auth.logout') }}">logout</a>
+            <a class="link-light text-decoration-none" href="{{ url_for('auth.logout') }}">{{ _('logout') }}</a>
         </section>
 
         {# saved tracks #}
@@ -16,8 +16,8 @@
                          alt="" class="align-self-center rounded flex-shrink-0" width="60" height="60">
                     <div class="d-flex gap-2 w-100 justify-content-between">
                         <div>
-                            <h3 class="mb-0">Liked Songs</h3>
-                            <p class="mb-0 opacity-75">{{ saved_tracks.total }} songs</p>
+                            <h3 class="mb-0">{{ _('Liked Songs') }}</h3>
+                            <p class="mb-0 opacity-75">{{ saved_tracks.total }} {{ _('songs') }}</p>
                         </div>
                         <a href="{{ url_for('main.send_csv', name='Liked Songs') }}"
                            class="opacity-75 text-nowrap link-light text-decoration-none">
@@ -30,7 +30,7 @@
 
         {# saved playlists #}
         <section class="mb-4">
-            <h2>Playlists</h2>
+            <h2>{{ _('Playlists') }}</h2>
             <ul class="list-group w-auto">
                 {% for playlist in saved_playlists.items %}
                     <li class="list-group-item d-flex gap-3 py-3" aria-current="true">
@@ -39,7 +39,7 @@
                         <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
                                 <h3 class="mb-0">{{ playlist.name }}</h3>
-                                <p class="mb-0 opacity-75">{{ playlist.tracks.total }} songs</p>
+                                <p class="mb-0 opacity-75">{{ playlist.tracks.total }} {{ _('songs') }}</p>
                             </div>
                             <a href="{{ url_for('main.send_csv', id=playlist.id, name=playlist.name) }}"
                                class="opacity-75 text-nowrap link-light text-decoration-none">
@@ -52,8 +52,12 @@
         </section>
 
         {# download all #}
-        <section class="mb-4">
-            <a class="btn btn-light fw-bold w-100" href="{{ url_for('main.send_zip') }}">Download all</a>
+        <section class="mb-2">
+            <a class="btn btn-light fw-bold w-100" href="{{ url_for('main.send_zip') }}">{{ _('Download all') }}</a>
+        </section>
+
+        <section class="text-center mb-4">
+            <a target="_blank" class="link-light" href="https://github.com/egliorn/spotify-csv-export-webapp#readme">{{ _('Read more') }}</a>
         </section>
 
     </main>
